visual mejorada, esquema casi completo

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dignidad y Compromiso - Partido político juvenil en Santa Bárbara, Antioquia">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="./scripts/main.js"></script>
-    <title>Dignidad y Compromiso</title>
+    <title>Dignidad y Compromiso - Santa Bárbara, Antioquia</title>
 </head>
 <body>
     <!-- Div correspondiente al Header. -->
@@ -19,21 +21,19 @@
         <section id="Ideología">
 
         </section>
-        <section id="Curules">
+        <section id="Candidatos">
+
+        </section>
+        <section id="Eventos">
+
+        </section>
+        <section id="Contacto">
 
         </section>
     </div>
     <!-- Div correspondiente al Footer-->
     <div id="footer">
-        <section id="resumen">
-
-        </section>
-        <section id="agradecimientos">
-
-        </section>
-        <section id="normatividad">
-
-        </section>
+        
     </div>
 </body>
 </html>
